--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="./Email/style.css" />
+    <link rel="stylesheet" href="./components/Email/style.css" />
     <title>E-maily</title>
     <script type="module" src="index.js"></script>
   </head>
